Changelog
=========

1.0.1 - unreleased
------------------


1.0 - 2009-08-02
----------------

- Added support for grouping multiple packages into one test group, avoiding
  some of the shared test setup cost.
  [hannosch]

- Added total test time to the output.
  [hannosch]

- Automatically extend the test path with the package location.
  [hannosch]

- Allow the use of regular expressions in the exclude list.
  [hannosch]

- Initial implementation.
  [hannosch]