@@ -4,6 +4,10 @@ Changelog
 1.0.1 - unreleased
 ------------------
 
+- Added bin/test as default for test-script option.  And [test]'s eggs (if the
+  part is available) are used if the eggs option isn't specified explicitly.
+  [reinout]
+
 
 1.0 - 2009-08-02
 ----------------
